Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,8 @@ jobs:
     displayName: 'Checkout submodules'
 
   - bash: |
-      cd ./build
+      mkdir ./build && cd ./build
+      cmake -DCMAKE_BUILD_TYPE=Release ..
       make -j4
       cd -
     displayName: 'Build'
