--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,10 @@
 trigger:
 - master
 
+variables:
+  CXX=g++-7
+  CC=gcc-7
+
 jobs:
 - job: 'Linux_Build'
 
@@ -18,7 +22,6 @@ jobs:
 
   - bash: |
       which g++-7
-      which g++-8
       mkdir ./build && cd ./build
       cmake -DCMAKE_BUILD_TYPE=Release ..
       make -j4
