--- a/src/atsc/CMakeLists.txt
+++ b/src/atsc/CMakeLists.txt
@@ -14,3 +14,4 @@ target_compile_options(atsc
 target_compile_definitions(atsc PRIVATE ${CXX_SSE_DEFINES})
 
 target_include_directories(atsc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
+add_subdirectory(test)
